--- a/world/v0.1.3/index.html
+++ b/world/v0.1.3/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>World Sandbox</title>
+  <meta charset="UTF-8">
+  <title>World Sandbox</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <h1>COMING SOON</h1>
+<script src="app.js"></script>
+<span id="version">v0.1.3 (2023-03-03)</span>
+<a id="info" href="info">?</a>
 </body>
 </html>
