--- a/world/v0.4.0/index.html
+++ b/world/v0.4.0/index.html
@@ -1,1 +1,13 @@
-<h1>Coming Soon</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>World Sandbox</title>
+  <link href="style.css" rel="stylesheet">
+</head>
+<body>
+<script src="app.js"></script>
+<span id="version">v0.4.0 (2023-07-30)</span>
+<a id="info" href="info">?</a>
+</body>
+</html>
