--- a/world/v0.5.0/map-gen-demo.html
+++ b/world/v0.5.0/map-gen-demo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Map Gen</title>
+  <title>Perlin</title>
   <style>
     canvas {
       outline: 1px solid grey;
@@ -14,6 +14,6 @@
   </style>
 </head>
 <body>
-<script src="bundle.js"></script>
+<script src="map-gen-demo.js"></script>
 </body>
 </html>
