--- a/world/v0.5.5/index.html
+++ b/world/v0.5.5/index.html
@@ -1,1 +1,13 @@
-<h1>COMING SOON</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>World Sandbox</title>
+  <link href="style.css" rel="stylesheet">
+</head>
+<body>
+<script src="app.js"></script>
+<span id="version">v0.5.5 (2024-04-04)</span>
+<a id="info" href="info">?</a>
+</body>
+</html>
