--- a/rgl/v0.0.1/index.html
+++ b/rgl/v0.0.1/index.html
@@ -1,1 +1,13 @@
-<h2>Coming Soon</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles.css" rel="stylesheet">
+  <title>RGL</title>
+</head>
+<body>
+<script src="app.js"></script>
+<span id="version">v0.0.1 (2025-06-26)</span>
+</body>
+</html>
