--- a/rgl/v0.2.1/index.html
+++ b/rgl/v0.2.1/index.html
@@ -1,1 +1,14 @@
-<h1>Coming Soon</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles.css" rel="stylesheet">
+  <title>RGL</title>
+</head>
+<body>
+<div id="root"></div>
+<span id="version">v0.2.1 (2025-08-12)</span>
+<script src="app.js"></script>
+</body>
+</html>
